# compile-fail

./: .travis.yml  Cargo.toml  README.md
src/: compile.rs  config.rs  json.rs  lib.rs  parse.rs  runner.rs  status.rs  utils.rs
tests/: compile-fail.rs  failures.rs
tests/compile-fail/: cant-find-crate.rs  error-codes.rs  link-deps.rs  link-parent.rs  test.rs
tests/failures/: excess-pattern.rs  missing-pattern.rs  no-error-pattern-fail.rs  no-error-pattern-pass.rs  pattern-mismatch.rs  pattern-not-found.rs  wrong-line.rs
