[package]
name = "compile-fail"
description = """
Make safe abstractions stay safe by not letting unsafe code compile
"""
readme = "README.md"
license = "CC0-1.0"
categories = ["development-tools::testing"]
keywords = ["test", "compiletest", "compile-fail", "compiler", "error"]
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
repository = "https://github.com/jonas-schievink/compile-fail"
version = "0.1.0"

[dependencies]
build-plan = "0.1.0"
log = "0.4.1"
env_logger = "0.4.3"
regex = "0.2.5"
tempdir = "0.3.5"
serde_json = "1.0.9"
serde = "1.0.27"
serde_derive = "1.0.27"
termcolor = "0.3.3"

[dev-dependencies]
either = "1.4.0"  # only used as a tiny crate to link against
